# algolabra-cpp

./: CMakeLists.txt  Makefile  filereader.cpp  filereader.h  main.cpp  scenario_service.cpp  scenario_service.h  search_service.cpp  search_service.h
sandbox/: main.cpp  testing1.cpp
src/: CMakeLists.txt  heuristics.cpp  heuristics.h  main.cpp  scenario_service.cpp  scenario_service.h  search_service.cpp  search_service.h
src/astar/: astar_search.cpp  astar_search.h
src/common_search/: astar_search.cpp  astar_search.h  common_search.cpp  common_search.h  fringe_search.cpp  fringe_search.h  node.h
src/common_search_utils/: common_search_utils.cpp  common_search_utils.h
src/fileIO/: filereader.cpp  filereader.h
src/fringe/: dll_version.h  fringe_search.cpp  fringe_search.h
src/scenario_service/: CMakeLists.txt  filereader.cpp  filereader.h  scenario.h  scenario_service.cpp  scenario_service.h
src/searches/: CMakeLists.txt  astar_old.cpp  astar_search.cpp  astar_search.h  dll.cpp  dll.h  dll_version.h  fringe_old.cpp  fringe_old.h  fringe_search.cpp  fringe_search.h  fringe_unopt.cpp  fringe_unopt.h  fringe_with_dll.cpp  fringe_with_dll.h
src/searches/common/: CMakeLists.txt  adjust.cpp  adjust.h  children.cpp  children.h  heuristics.cpp  heuristics.h  retval.h  searches_common.h  tools.cpp  tools.h
src/service/: scenario_service.cpp  scenario_service.h  search_service.cpp  search_service.h
tests/: CMakeLists.txt  children_corner_test.cpp  children_test.cpp  chilren_test.cpp  test_astar_search.cpp  test_children.cpp  test_common_search.cpp  test_common_search_utils.cpp  test_heuristics.cpp
